--- a/reference.bib
+++ b/reference.bib
@@ -1,5 +1,5 @@
 @online{thesis,
-    author    = "FatMinMin",
+    author    = "GodMinlMin",
     title     = "NCTU latex thesis",
     url       = "https://github.com/chiehmin/nctu-thesis",
 }
